--- a/about.html
+++ b/about.html
@@ -621,13 +621,13 @@
                                     <i class="fa-solid fa-plus d-lg-none"></i>
                                 </div>
                                 <ul class="footer-nav-list">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Gold Star Membership</a></li>
-                                    <li><a href="#">Events & Promotions</a></li>
-                                    <li><a href="#">Meet Our Crew</a></li>
-                                    <li><a href="#">Employment</a></li>
-                                    <li><a href="#">News & Articles</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="about.html">About Us</a></li>
+                                    <li><a href="gold-star-membership.html">Gold Star Membership</a></li>
+                                    <li><a href="specials.html">Events & Promotions</a></li>
+                                    <li><a href="meet-our-crew.html">Meet Our Crew</a></li>
+                                    <li><a href="employment.html">Employment</a></li>
+                                    <li><a href="news-articles.html">News & Articles</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
