--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                                 <ul class="footer-nav-list">
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="gold-star-membership.html">Gold Star Membership</a></li>
-                                    <li><a href="events-promos.html">Events & Promotions</a></li>
+                                    <li><a href="specials.html">Events & Promotions</a></li>
                                     <li><a href="meet-our-crew.html">Meet Our Crew</a></li>
                                     <li><a href="employment.html">Employment</a></li>
                                     <li><a href="news-articles.html">News & Articles</a></li>
