--- a/specials-details.html
+++ b/specials-details.html
@@ -277,7 +277,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10">
                         <div class="specials-details-img mb-lg-5 mb-4 text-center">
-                            <img src="./assets/images/specials/specialsimg1.jpg"
+                            <img src="./assets/images/special-details/detail-img.png"
                                 alt="Mercury Win a New Outboard Giveaway!" class="img-fluid w-100">
                         </div>
 
