--- a/specials-details.html
+++ b/specials-details.html
@@ -84,10 +84,10 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <ul class="mega-list">
-                            <li><a href="#">All Inventory</a></li>
-                            <li><a href="#">New Boats</a></li>
-                            <li><a href="#">Pre-Owned Boats</a></li>
-                            <li><a href="#">Factory Promotions</a></li>
+                            <li><a href=javascript:void(0)>All Inventory</a></li>
+                            <li><a href=javascript:void(0)>New Boats</a></li>
+                            <li><a href=javascript:void(0)>Pre-Owned Boats</a></li>
+                            <li><a href=javascript:void(0)>Factory Promotions</a></li>
                             <li class="mt-4"><a href="trade.html">Get Your Trade Value</a></li>
                             <li><a href="financing.html">Get Financing</a></li>
                         </ul>
@@ -181,10 +181,10 @@
                     </div>
                     <div id="mobile-inv" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
-                            <li class="py-2"><a href="#" class="text-teal">All Inventory</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">New Boats</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Pre-Owned Boats</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Factory Promotions</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">All Inventory</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">New Boats</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">Pre-Owned Boats</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">Factory Promotions</a></li>
                         </ul>
                     </div>
                 </div>
@@ -219,8 +219,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -236,9 +238,9 @@
                     <a href="tel:2694144351" class="h4 font-weight-bold text-blue">(269) 414-4351</a>
                 </div>
                 <div class="sidebar-socials d-flex justify-content-start gap-3">
-                    <a href="#" class="mr-3"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="mr-3"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href=javascript:void(0) class="mr-3"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=javascript:void(0) class="mr-3"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href=javascript:void(0)><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -263,9 +265,9 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <div class="sidebar-socials">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -294,12 +296,19 @@
                         </div>
 
                         <div class="">
-                            <a href="#" class="btn-outline-global">Enter for a chance to win!</a>
+                            <a href=javascript:void(0) class="btn-outline-global">Enter for a chance to win!</a>
                         </div>
 
                         <div class="terms-conditions pt-5">
                             <h2 class="terms-title mb-4">TERMS AND CONDITIONS</h2>
-                            <p class="terms-text">NO PURCHASE NECESSARY TO ENTER OR CLAIM A PRIZE. VOID WHERE PROHIBITED BY LAW. CERTAIN RESTRICITONS APPLY. PLEASE SEE OFFICAL RULES FOR ELIGIBILITY AND DETAILS. To be eligible to enter and win, you must be: (a) a legal U.S. resident (excluding Puerto Rico, U.S. territories and possessions); (b) 18 years or older as of the Entry Period and (c) reside in the United States as of the Entry Period. To be eligible to win the Grand Prize, the winning entrant must also own a boat that is suitable for the safe installation and operation of the selected engine (between 2.5hp and 300hp) as further explained in the official rules.</p>
+                            <p class="terms-text">NO PURCHASE NECESSARY TO ENTER OR CLAIM A PRIZE. VOID WHERE PROHIBITED
+                                BY LAW. CERTAIN RESTRICITONS APPLY. PLEASE SEE OFFICAL RULES FOR ELIGIBILITY AND
+                                DETAILS. To be eligible to enter and win, you must be: (a) a legal U.S. resident
+                                (excluding Puerto Rico, U.S. territories and possessions); (b) 18 years or older as of
+                                the Entry Period and (c) reside in the United States as of the Entry Period. To be
+                                eligible to win the Grand Prize, the winning entrant must also own a boat that is
+                                suitable for the safe installation and operation of the selected engine (between 2.5hp
+                                and 300hp) as further explained in the official rules.</p>
                         </div>
                     </div>
                 </div>
@@ -354,9 +363,12 @@
                                         <p class="hours-text">Saturday - Monday: Closed</p>
                                     </div>
                                     <div class="footer-social-links mt-4 d-flex justify-content-center">
-                                        <a href="#" class="social-icon mr-4"><i class="fa-brands fa-facebook-f"></i></a>
-                                        <a href="#" class="social-icon mr-4"><i class="fa-brands fa-x-twitter"></i></a>
-                                        <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href=javascript:void(0) class="social-icon mr-4"><i
+                                                class="fa-brands fa-facebook-f"></i></a>
+                                        <a href=javascript:void(0) class="social-icon mr-4"><i
+                                                class="fa-brands fa-x-twitter"></i></a>
+                                        <a href=javascript:void(0) class="social-icon"><i
+                                                class="fa-brands fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -368,14 +380,14 @@
                                     <i class="fa-solid fa-plus d-lg-none"></i>
                                 </div>
                                 <ul class="footer-nav-list">
-                                    <li><a href="#">New Boats</a></li>
-                                    <li><a href="#">Pre-Owned Boats</a></li>
-                                    <li><a href="#">Tahoe Pontoon Boats</a></li>
-                                    <li><a href="#">AlumaCraft Boats</a></li>
-                                    <li><a href="#">Bayview Boats</a></li>
-                                    <li><a href="#">Landing Craft Boats</a></li>
-                                    <li><a href="#">Trade / Sell Your Boat</a></li>
-                                    <li><a href="#">Get Financing</a></li>
+                                    <li><a href=javascript:void(0)>New Boats</a></li>
+                                    <li><a href=javascript:void(0)>Pre-Owned Boats</a></li>
+                                    <li><a href=javascript:void(0)>Tahoe Pontoon Boats</a></li>
+                                    <li><a href=javascript:void(0)>AlumaCraft Boats</a></li>
+                                    <li><a href=javascript:void(0)>Bayview Boats</a></li>
+                                    <li><a href=javascript:void(0)>Landing Craft Boats</a></li>
+                                    <li><a href=javascript:void(0)>Trade / Sell Your Boat</a></li>
+                                    <li><a href=javascript:void(0)>Get Financing</a></li>
                                 </ul>
                             </div>
 
@@ -386,10 +398,10 @@
                                     <i class="fa-solid fa-plus d-lg-none"></i>
                                 </div>
                                 <ul class="footer-nav-list">
-                                    <li><a href="#">Service Center</a></li>
-                                    <li><a href="#">Boat Storage</a></li>
-                                    <li><a href="#">Docks, Lifts, Hoists, & Barge Services</a></li>
-                                    <li><a href="#">Parts</a></li>
+                                    <li><a href=javascript:void(0)>Service Center</a></li>
+                                    <li><a href=javascript:void(0)>Boat Storage</a></li>
+                                    <li><a href=javascript:void(0)>Docks, Lifts, Hoists, & Barge Services</a></li>
+                                    <li><a href=javascript:void(0)>Parts</a></li>
                                 </ul>
                             </div>
 
@@ -400,13 +412,13 @@
                                     <i class="fa-solid fa-plus d-lg-none"></i>
                                 </div>
                                 <ul class="footer-nav-list">
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Gold Star Membership</a></li>
-                                    <li><a href="#">Events & Promotions</a></li>
-                                    <li><a href="#">Meet Our Crew</a></li>
-                                    <li><a href="#">Employment</a></li>
-                                    <li><a href="#">News & Articles</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href=javascript:void(0)>About Us</a></li>
+                                    <li><a href=javascript:void(0)>Gold Star Membership</a></li>
+                                    <li><a href=javascript:void(0)>Events & Promotions</a></li>
+                                    <li><a href=javascript:void(0)>Meet Our Crew</a></li>
+                                    <li><a href=javascript:void(0)>Employment</a></li>
+                                    <li><a href=javascript:void(0)>News & Articles</a></li>
+                                    <li><a href=javascript:void(0)>Contact Us</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -420,8 +432,9 @@
         <div class="footer-bottom-bar py-3 border-top">
             <div class="container-fluid">
                 <p class="copyright-text text-center">
-                    Powered By MDS Brand | <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a> | <a
-                        href="#">Accessibility</a> | <a href="#">Site Map</a>
+                    Powered By MDS Brand | <a href=javascript:void(0)>Terms & Conditions</a> | <a
+                        href=javascript:void(0)>Privacy Policy</a> | <a href=javascript:void(0)>Accessibility</a> | <a
+                        href=javascript:void(0)>Site Map</a>
                 </p>
             </div>
         </div>
