--- a/about.html
+++ b/about.html
@@ -85,10 +85,10 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <ul class="mega-list">
-                            <li><a href="#">All Inventory</a></li>
-                            <li><a href="#">New Boats</a></li>
-                            <li><a href="#">Pre-Owned Boats</a></li>
-                            <li><a href="#">Factory Promotions</a></li>
+                            <li><a href=javascript:void(0)>All Inventory</a></li>
+                            <li><a href=javascript:void(0)>New Boats</a></li>
+                            <li><a href=javascript:void(0)>Pre-Owned Boats</a></li>
+                            <li><a href=javascript:void(0)>Factory Promotions</a></li>
                             <li class="mt-4"><a href="trade.html">Get Your Trade Value</a></li>
                             <li><a href="financing.html">Get Financing</a></li>
                         </ul>
@@ -182,10 +182,10 @@
                     </div>
                     <div id="mobile-inv" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
-                            <li class="py-2"><a href="#" class="text-teal">All Inventory</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">New Boats</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Pre-Owned Boats</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Factory Promotions</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">All Inventory</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">New Boats</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">Pre-Owned Boats</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">Factory Promotions</a></li>
                         </ul>
                     </div>
                 </div>
@@ -220,8 +220,10 @@
                     <div id="mobile-company" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
                             <li class="py-2"><a href="about.html" class="text-teal">About Us</a></li>
-                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a></li>
-                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star Membership</a></li>
+                            <li class="py-2"><a href="mission-statement.html" class="text-teal">Mission Statement</a>
+                            </li>
+                            <li class="py-2"><a href="gold-star-membership.html" class="text-teal">Gold Star
+                                    Membership</a></li>
                             <li class="py-2"><a href="events-promos.html" class="text-teal">Events & Promos</a></li>
                             <li class="py-2"><a href="news-articles.html" class="text-teal">News & Articles</a></li>
                             <li class="py-2"><a href="meet-our-crew.html" class="text-teal">Meet Our Crew</a></li>
@@ -237,9 +239,9 @@
                     <a href="tel:2694144351" class="h4 font-weight-bold text-blue">(269) 414-4351</a>
                 </div>
                 <div class="sidebar-socials d-flex justify-content-start gap-3">
-                    <a href="#" class="mr-3"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="mr-3"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href=javascript:void(0) class="mr-3"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=javascript:void(0) class="mr-3"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href=javascript:void(0)><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -264,9 +266,9 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <div class="sidebar-socials">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -368,7 +370,7 @@
                     <!-- Item 5 -->
                     <div class="item">
                         <div class="story-card">
-                            <div class="story-year range">October 2015</div>
+                            <div class="story-year range"> <span>October</span> 2015</div>
                             <div class="story-divider"></div>
                             <div class="story-content">
                                 <h4>A New Home in Edwardsburg</h4>
@@ -575,9 +577,12 @@
                                         <p class="hours-text">Saturday - Monday: Closed</p>
                                     </div>
                                     <div class="footer-social-links mt-4 d-flex justify-content-center">
-                                        <a href="#" class="social-icon mr-4"><i class="fa-brands fa-facebook-f"></i></a>
-                                        <a href="#" class="social-icon mr-4"><i class="fa-brands fa-x-twitter"></i></a>
-                                        <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href=javascript:void(0) class="social-icon mr-4"><i
+                                                class="fa-brands fa-facebook-f"></i></a>
+                                        <a href=javascript:void(0) class="social-icon mr-4"><i
+                                                class="fa-brands fa-x-twitter"></i></a>
+                                        <a href=javascript:void(0) class="social-icon"><i
+                                                class="fa-brands fa-instagram"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -589,14 +594,14 @@
                                     <i class="fa-solid fa-plus d-lg-none"></i>
                                 </div>
                                 <ul class="footer-nav-list">
-                                    <li><a href="#">New Boats</a></li>
-                                    <li><a href="#">Pre-Owned Boats</a></li>
-                                    <li><a href="#">Tahoe Pontoon Boats</a></li>
-                                    <li><a href="#">AlumaCraft Boats</a></li>
-                                    <li><a href="#">Bayview Boats</a></li>
-                                    <li><a href="#">Landing Craft Boats</a></li>
-                                    <li><a href="#">Trade / Sell Your Boat</a></li>
-                                    <li><a href="#">Get Financing</a></li>
+                                    <li><a href=javascript:void(0)>New Boats</a></li>
+                                    <li><a href=javascript:void(0)>Pre-Owned Boats</a></li>
+                                    <li><a href=javascript:void(0)>Tahoe Pontoon Boats</a></li>
+                                    <li><a href=javascript:void(0)>AlumaCraft Boats</a></li>
+                                    <li><a href=javascript:void(0)>Bayview Boats</a></li>
+                                    <li><a href=javascript:void(0)>Landing Craft Boats</a></li>
+                                    <li><a href=javascript:void(0)>Trade / Sell Your Boat</a></li>
+                                    <li><a href=javascript:void(0)>Get Financing</a></li>
                                 </ul>
                             </div>
 
@@ -607,10 +612,10 @@
                                     <i class="fa-solid fa-plus d-lg-none"></i>
                                 </div>
                                 <ul class="footer-nav-list">
-                                    <li><a href="#">Service Center</a></li>
-                                    <li><a href="#">Boat Storage</a></li>
-                                    <li><a href="#">Docks, Lifts, Hoists, & Barge Services</a></li>
-                                    <li><a href="#">Parts</a></li>
+                                    <li><a href=javascript:void(0)>Service Center</a></li>
+                                    <li><a href=javascript:void(0)>Boat Storage</a></li>
+                                    <li><a href=javascript:void(0)>Docks, Lifts, Hoists, & Barge Services</a></li>
+                                    <li><a href=javascript:void(0)>Parts</a></li>
                                 </ul>
                             </div>
 
@@ -641,8 +646,9 @@
         <div class="footer-bottom-bar py-3 border-top">
             <div class="container-fluid">
                 <p class="copyright-text text-center">
-                    Powered By MDS Brand | <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy</a> | <a
-                        href="#">Accessibility</a> | <a href="#">Site Map</a>
+                    Powered By MDS Brand | <a href=javascript:void(0)>Terms & Conditions</a> | <a
+                        href=javascript:void(0)>Privacy Policy</a> | <a href=javascript:void(0)>Accessibility</a> | <a
+                        href=javascript:void(0)>Site Map</a>
                 </p>
             </div>
         </div>
