--- a/service.html
+++ b/service.html
@@ -85,10 +85,10 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <ul class="mega-list">
-                            <li><a href="#">All Inventory</a></li>
-                            <li><a href="#">New Boats</a></li>
-                            <li><a href="#">Pre-Owned Boats</a></li>
-                            <li><a href="#">Factory Promotions</a></li>
+                            <li><a href=javascript:void(0)>All Inventory</a></li>
+                            <li><a href=javascript:void(0)>New Boats</a></li>
+                            <li><a href=javascript:void(0)>Pre-Owned Boats</a></li>
+                            <li><a href=javascript:void(0)>Factory Promotions</a></li>
                             <li class="mt-4"><a href="trade.html">Get Your Trade Value</a></li>
                             <li><a href="financing.html">Get Financing</a></li>
                         </ul>
@@ -182,10 +182,10 @@
                     </div>
                     <div id="mobile-inv" class="accordion-body pb-3" style="display: none;">
                         <ul class="list-unstyled pl-3">
-                            <li class="py-2"><a href="#" class="text-teal">All Inventory</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">New Boats</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Pre-Owned Boats</a></li>
-                            <li class="py-2"><a href="#" class="text-teal">Factory Promotions</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">All Inventory</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">New Boats</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">Pre-Owned Boats</a></li>
+                            <li class="py-2"><a href=javascript:void(0) class="text-teal">Factory Promotions</a></li>
                         </ul>
                     </div>
                 </div>
@@ -239,9 +239,9 @@
                     <a href="tel:2694144351" class="h4 font-weight-bold text-blue">(269) 414-4351</a>
                 </div>
                 <div class="sidebar-socials d-flex justify-content-start gap-3">
-                    <a href="#" class="mr-3"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="mr-3"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href=javascript:void(0) class="mr-3"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=javascript:void(0) class="mr-3"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href=javascript:void(0)><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
         </div>
@@ -266,9 +266,9 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <div class="sidebar-socials">
-                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-facebook-f"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-x-twitter"></i></a>
+                <a href=javascript:void(0)><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
     </div>
@@ -338,10 +338,10 @@
                         <div class="row">
                             <!-- Detailing -->
                             <div class="col-lg-6 services-grid-item">
-                                    <div class="services-img-wrapper">
-                                        <img src="./assets/images/service/boat-detailing.png" alt="Boat Detailing">
-                                    </div>
-                                    <h3 class="services-item-title mb-3">BOAT DETAILING</h3>
+                                <div class="services-img-wrapper">
+                                    <img src="./assets/images/service/boat-detailing.png" alt="Boat Detailing">
+                                </div>
+                                <h3 class="services-item-title mb-3">BOAT DETAILING</h3>
                                 <p class="services-item-text">
                                     Detailing, polishing, and waxing are not to be overlooked. These are important
                                     maintenance
@@ -356,10 +356,10 @@
                             </div>
                             <!-- Engine Repair -->
                             <div class="col-lg-6 services-grid-item">
-                                    <div class="services-img-wrapper">
-                                        <img src="./assets/images/service/engine-repair.png" alt="Engine Repair">
-                                    </div>
-                                    <h3 class="services-item-title mb-3">ENGINE REPAIR</h3>
+                                <div class="services-img-wrapper">
+                                    <img src="./assets/images/service/engine-repair.png" alt="Engine Repair">
+                                </div>
+                                <h3 class="services-item-title mb-3">ENGINE REPAIR</h3>
                                 <p class="services-item-text">
                                     Our team of six certified technicians and highly efficient service department are
                                     here to
@@ -372,10 +372,10 @@
                             </div>
                             <!-- Winterization -->
                             <div class="col-lg-6 services-grid-item">
-                                    <div class="services-img-wrapper">
+                                <div class="services-img-wrapper">
                                     <img src="./assets/images/service/boat-winterizaation.png" alt="Boat Winterization">
-                                    </div>
-                                    <h3 class="services-item-title mb-3">BOAT WINTERIZATION</h3>
+                                </div>
+                                <h3 class="services-item-title mb-3">BOAT WINTERIZATION</h3>
                                 <p class="services-item-text">
                                     Boat winterization is an important part of boat maintenance here in Michigan! This
                                     is the
@@ -391,10 +391,10 @@
                             </div>
                             <!-- Installation -->
                             <div class="col-lg-6 services-grid-item">
-                                    <div class="services-img-wrapper">
-                                        <img src="./assets/images/service/installation.png" alt="Engine Installation">
-                                    </div>
-                                    <h3 class="services-item-title mb-3">ENGINE INSTALLATION</h3>
+                                <div class="services-img-wrapper">
+                                    <img src="./assets/images/service/installation.png" alt="Engine Installation">
+                                </div>
+                                <h3 class="services-item-title mb-3">ENGINE INSTALLATION</h3>
                                 <p class="services-item-text">
                                     Installing a new engine is a great way to breathe new life into your old boat! Of
                                     course,
@@ -451,7 +451,7 @@
                         <div class="text-center mb-5">
                             <h2 class="section-title-alt">REQUEST SERVICE</h2>
                         </div>
-                        <form action="#" class="request-service-form">
+                        <form action=javascript:void(0) class="request-service-form">
                             <div class="row">
                                 <div class="col-12">
                                     <input type="text" class="request-form-input" placeholder="First Name">
